add eslint and prettier to project

--- a/package.json
+++ b/package.json
@@ -24,6 +24,16 @@
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
   },
+  "prettier": {
+    "singleQuote": true,
+    "printWidth": 100,
+    "tabWidth": 2,
+    "arrowParens": "avoid",
+    "bracketSpacing": true,
+    "semi": false,
+    "jsxBracketSameLine": false,
+    "endOfLine": "auto"
+  },
   "eslintConfig": {
     "extends": [
       "react-app",
@@ -43,6 +53,15 @@
     ]
   },
   "devDependencies": {
+    "eslint": "^7.32.0",
+    "eslint-config-google": "^0.14.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-import": "^2.25.3",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-react": "^7.28.0",
+    "eslint-plugin-react-hooks": "^4.3.0",
+    "eslint-prettier": "^0.0.0-empty",
+    "prettier": "^2.5.1",
     "sass": "^1.41.0"
   }
 }
